--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div> -->
             <div class="box">
               <p><span> email : </span> nassirif526@gmail.com</p>
-              <p><span> place : </span> MAROC, CASABLANCA </p>
+              <p><span> place : </span> MOROCCO, CASABLANCA </p>
             </div>
         </div>
         
@@ -268,7 +268,7 @@
           <h3>contact info</h3>
           <p> <i class="fas fa-phone"></i>+212 646-342171</p>
           <p> <i class="fas fa-envelope"></i>nassirif526@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>MAROC, CASABLANCA</p>
+          <p> <i class="fas fa-map-marked-alt"></i>MOROCCO, CASABLANCA</p>
           <div class="share">
 
               <a href="https://www.linkedin.com/in" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
