--- a/experience/index.html
+++ b/experience/index.html
@@ -54,7 +54,7 @@
           <h3>contact info</h3>
           <p> <i class="fas fa-phone"></i>+212 646-342171</p>
           <p> <i class="fas fa-envelope"></i>nassirif526@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>MAROC, CASABLANCA</p>
+          <p> <i class="fas fa-map-marked-alt"></i>MOROCCO, CASABLANCA</p>
           <div class="share">
 
             <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
