--- a/projects/index.html
+++ b/projects/index.html
@@ -95,6 +95,8 @@
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
 
 <script src="./script.js"></script>
+<script src="https://fatima-zahra-nassiri.vercel.app/projects/script.js"></script>
+
 
 </body>
 </html>
