fix all bugs and add pop-up for projects view

--- a/index.html
+++ b/index.html
@@ -173,13 +173,12 @@
 
   <div class="box-container">
 
-  
-
+    
 </div>
 
 
 <div class="viewall">
-  <a href="/projects" class="btn"><span>View All</span>
+  <a href="./projects" class="btn"><span>View All</span>
     <i class="fas fa-arrow-right"></i>
 </a>
 </div>
@@ -238,7 +237,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
+          <h3>FATIMA ZAHRA's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
@@ -305,6 +304,19 @@
 <script src="./assets/js/script.js"></script>
 
 <script></script>
+
+<!-- POP-UP -->
+<!-- Modal -->
+<div id="projectModal" class="modal" style="display: none;">
+  <div class="modal-content">
+      <!-- Close Button -->
+      <span class="close">&times;</span>
+      <!-- Media Content -->
+      <div id="modalContent"></div>
+  </div>
+</div>
+
+  
 
 </body>
 </html>
