--- a/projects/index.html
+++ b/projects/index.html
@@ -38,10 +38,10 @@
   
   <div id="filters" class="button-group">
     <button class="btn is-checked" data-filter="*">All Projects</button>
-    <button class="btn" data-filter=".mern">MERN Stack</button>
-    <button class="btn" data-filter=".lamp">LAMP Stack</button>
-    <button class="btn" data-filter=".basicweb">Basic Web</button>
+    <button class="btn" data-filter=".webPage">Page Web</button>
+    <button class="btn" data-filter=".webApp">Application Web</button>
     <button class="btn" data-filter=".android">Android App</button>
+    <button class="btn" data-filter=".other">Other</button>
   </div>
 
   <div class="box-container">
@@ -65,7 +65,7 @@
   </div>
 
   <div class="backbtn">
-    <a href="/#work" class="btn">
+    <a href="../#work" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
@@ -95,6 +95,19 @@
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
 
 <script src="./script.js"></script>
+
+<!-- POP-UP -->
+<!-- Modal -->
+<div id="projectModal" class="modal" style="display: none;">
+  <div class="modal-content">
+      <!-- Close Button -->
+      <span class="close">&times;</span>
+      <!-- Media Content -->
+      <div id="modalContent"></div>
+  </div>
+</div>
+
+
 
 
 </body>
