--- a/projects/index.html
+++ b/projects/index.html
@@ -94,7 +94,7 @@
 
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
 
-<script src="/projects/script.js"></script>
+<script src="./projects/script.js"></script>
 
 <!-- POP-UP -->
 <!-- Modal -->
