--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
           <p> <i class="fas fa-map-marked-alt"></i>MOROCCO, CASABLANCA</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/nassiri-fatima-zahra-ba69a0248/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
               <a href="https://github.com/fatimazahranassiri" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
               <a href="mailto:nassirif526@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="https://twitter.com/" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
+              
               <!-- <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a> -->
           </div>
       </div>
